[add] remove deprecations